--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RenderStudio | Premium Architectural Visualization</title>
+    <title>GXVISUALS | Premium Architectural Visualization</title>
     <meta name="description" content="Transform your architectural vision into stunning photorealistic 3D renders. Premium visualization services for architects, developers, and real estate professionals." />
-    <meta name="author" content="RenderStudio" />
+    <meta name="author" content="GXVISUALS" />
 
-    <meta property="og:title" content="RenderStudio | Premium Architectural Visualization" />
+    <meta property="og:title" content="GXVISUALS | Premium Architectural Visualization" />
     <meta property="og:description" content="Transform your architectural vision into stunning photorealistic 3D renders." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@RenderStudio" />
+    <meta name="twitter:site" content="@GXVISUALS" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
