--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <meta name="description" content="Transform your architectural vision into stunning photorealistic 3D renders. Premium visualization services for architects, developers, and real estate professionals." />
     <meta name="author" content="GXVISUALS" />
 
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+
     <meta property="og:title" content="GXVISUALS | Premium Architectural Visualization" />
     <meta property="og:description" content="Transform your architectural vision into stunning photorealistic 3D renders." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.gxvisuals.com" />
+    <meta property="og:image" content="https://www.gxvisuals.com/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@GXVISUALS" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="GXVISUALS" />
+    <meta name="twitter:image" content="https://www.gxvisuals.com/logo.png" />
   </head>
 
   <body>
@@ -22,4 +26,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
- 
