--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GXVISUALS | Premium Architectural Visualization</title>
-    <meta name="description" content="Transform your architectural vision into stunning photorealistic 3D renders. Premium visualization services for architects, developers, and real estate professionals." />
+    <meta name="description" content="GXVISUALS: Premium 3D architectural visualization in Cyprus. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
     <meta name="author" content="GXVISUALS" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
