--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GXVISUALS | 3D Architectural Visualization & Technical Kitchen Design Cyprus</title>
-    <meta name="description" content="GXVISUALS: Premium 3D architectural visualization in Cyprus. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
+    <title>GXVISUALS | 3D Architectural Visualization & Technical Kitchen Design</title>
+    <meta name="description" content="GXVISUALS: Premium 3D architectural visualization. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
     <meta name="author" content="GXVISUALS" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
