--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GXVISUALS | 3D Architectural Visualization & Technical Kitchen Design</title>
-    <meta name="description" content="GXVISUALS: Premium 3D architectural visualization. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
+    
+    <title>GXVISUALS | 3D Visualization & Kitchen Design Cyprus</title>
+    <meta name="description" content="GXVISUALS: Premium 3D architectural visualization in Cyprus. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
+    <meta name="google-site-verification" content="google861a9cb6cefbf58f.html" />
+    <link rel="canonical" href="https://www.gxvisuals.com/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+    
     <meta name="author" content="GXVISUALS" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
