--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GXVISUALS | 3D Visualization & Kitchen Design Cyprus</title>
     <meta name="description" content="GXVISUALS: Premium 3D architectural visualization in Cyprus. Fast, photorealistic renders & technical kitchen sketches with exact dimensions. Request a quote." />
     
-    <meta name="google-site-verification" content="google861a9cb6cefbf58f" />
+    <meta name="google-site-verification" content="google861a9cb6cefbf58f.html" />
     <link rel="canonical" href="https://www.gxvisuals.com/" />
     
     <link rel="alternate" hreflang="en" href="https://www.gxvisuals.com/" />
