--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
-<html lang="en"> 
+<html lang="el"> 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17899630675"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WCJG806M4H"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
+      // Σύνδεση με Google Analytics
+      gtag('config', 'G-WCJG806M4H');
+      // Σύνδεση με Google Ads
       gtag('config', 'AW-17899630675');
     </script>
 
