--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <meta name="author" content="GXVISUALS" />
     <meta name="keywords" content="3D rendering Cyprus, architectural visualization Limassol, kitchen design sketches, photorealistic renders Cyprus, GXVISUALS" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png" />
 
     <meta property="og:title" content="GXVISUALS | Premium Architectural Visualization Cyprus" />
     <meta property="og:description" content="Transform your architectural vision into stunning photorealistic 3D renders. Specialized in residential and commercial projects." />
